samples/_failures_safe/1761127797_792f3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2895b5af.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2895b5af.c:135:39: error: expected ‘)’ at end of input
  135 |                         dist[v] = (int
      |                                   ~   ^
      |                                       )
./samples/SAFE/__tmp_2895b5af.c:135:25: error: expected declaration or statement at end of input
  135 |                         dist[v] = (int
      |                         ^~~~
./samples/SAFE/__tmp_2895b5af.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2895b5af.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2895b5af.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2895b5af.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2895b5af.c:135:25: error: expected declaration or statement at end of input
